--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author     : yechanlee
   # path: assets\img\clients\creative-market.jpg
   # height: 60 #height in px, defaults to 52px
 
-locale: "en-US" # See available languages in _data/sitetext.yml
+locale: "ko-KR" # See available languages in _data/sitetext.yml
 
 analytics:
   google: #Google Analytics tracking code here
@@ -33,7 +33,7 @@ collections:
   portfolio:
 
 markdown: kramdown
-
+encoding: utf-8
 # Uncomment following line to use Formspree form ID based URL instead of email based URL
 # Details: https://help.formspree.io/hc/en-us/articles/360017735154-How-to-prevent-spam
 # formspree_form_path: "f/a_form_id"
