--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author     : yechanlee
   # path: assets\img\clients\creative-market.jpg
   # height: 60 #height in px, defaults to 52px
 
-locale: "ko-KR" # See available languages in _data/sitetext.yml
+locale: "en-US" # See available languages in _data/sitetext.yml
 
 analytics:
   google: #Google Analytics tracking code here
