--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ theme: jekyll-agency
 url    : "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 
-title      : yeye
+title      : 안박사의 New Dior Bag Get을 축하합니다!
 email      : firecare@naver.com #this is also the email contact forms will go to
 description: "Site description"
 author     : yechanlee
