--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -12,7 +12,7 @@
 en: &DEFAULT_EN
   header:
     title: Welcome to our Studio!
-    text: It's Nice To Meet You
+    text: 안박사의 470만원 짜리 NEW Dior Bag 구입을 축하드립니다.
     button: Tell Me More
     buttonlink: "#services"
 
