--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -44,9 +44,9 @@ en: &DEFAULT_EN
     # left is the default
     #start_align: "left"
     events:
-      - title: "Our Humble Beginnings"
-        year: "2009-2011"
-        desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!"
+      - title: "ChungNam National University"
+        year: "2013-2017"
+        desc: "충남대학교 컴퓨터공학과(현 컴퓨터융합학부) 졸. "  "go"
         image: assets/img/timeline/1.jpg
         alt:
       - title: "An Agency is Born"
