--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -46,7 +46,8 @@ en: &DEFAULT_EN
     events:
       - title: "ChungNam National University"
         year: "2013-2017"
-        desc: "충남대학교 컴퓨터공학과(현 컴퓨터융합학부) 졸. "  "go"
+        desc: "충남대학교 컴퓨터공학과(현 컴퓨터융합학부) 졸. 
+        dd" 
         image: assets/img/timeline/1.jpg
         alt:
       - title: "An Agency is Born"
