--- a/_data/style.yml
+++ b/_data/style.yml
@@ -4,7 +4,7 @@
 #black: "#000"
 
 #Image Customization
-header-image: "../img/dior.png"
+header-image: "../img/piano.jpg"
 contact-image: "../img/contact.png"
 
 #Font Awesome icon for portfolio grid when an item is hovered over
