--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -28,21 +28,17 @@ en: &DEFAULT_EN
         desc: "충남대학교 컴퓨터공학과(현 컴퓨터융합학부)" 
         image: assets/img/timeline/1.jpg
         alt:
-      - title: "An Agency is Born"
-        year: "March 2011"
-        desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!"
+      - title: "000특공여단 통신장교"
+        year: "2017.03-2019.06"
+        desc: "네트워크/유·무선 인프라/보안솔루션/통신장비/통역장교"
         image: assets/img/timeline/2.jpg
         alt:
-      - title: "Jekyll Theme is created"
-        year: "2019"
-        desc: "Ravi Riley converted Agency, a Bootstrap-based theme, into a Jekyll theme. The Jekyll theme can be installed as a Ruby gem, or remotely. For more information, visit the documentation."
+      - title: "롯데정보통신(Lotte Data Communications Company)"
+        year: "2019.07 ~ 재직중"
+        desc: "그룹웨어/SAP/네트워크/인사시스템/POS/전자결재/라이선스/보안솔루션  JAVA/Spring/Python/C++/MSSQL/MySQL"
         image: assets/img/timeline/3.jpg
         alt: image alt text
-      - title: "Title"
-        year: "2009-2011"
-        desc: "Your description here, **Markdown** is fully supported."
-        image: assets/img/timeline/4.jpg
-        alt:
+     
         # you can enforce the alignment
         align: right
     end: "Be Part <br> of Our <br> Story!"
