--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,8 +24,8 @@ en: &DEFAULT_EN
       section: team
     - title: "Contact"
       section: contact
-    - title: "Theme Source"
-      url: https://github.com/raviriley/agency-jekyll-theme/
+    - title: "Tistory"
+      url: https://yellongs.tistory.com/
 en-US:
   <<: *DEFAULT_EN
 en-CA:
