--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -61,7 +61,7 @@ en: &DEFAULT_EN
 
   portfolio:
     title: "Portfolio"
-    text: "Lorem ipsum dolor sit amet consectetur."
+    text: "Projects & Certificate & Awards Record"
     section: portfolio
     closebutton: "Close Project"
 
