--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,8 @@ en: &DEFAULT_EN
       section: services
     - title: "Portfolio"
       section: portfolio
-
+    - title: "About3"
+      section: assets/pages/
     - title: "Team"
       section: team
     - title: "Contact"
