--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -114,7 +114,7 @@ en: &DEFAULT_EN
 
       - name: "Heok Se Li"
         role: "The Aqua Man"
-        image: assets/img/team/500x500.jpg
+        image: assets/img/cat.jpeg
         social:
           - url: https://twitter.com
             icon: fab fa-twitter
