--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -27,14 +27,15 @@ en: &DEFAULT_EN
     events:
       - title: "ChungNam National University"
         year: "2013-2017"
-        desc: "-충남대학교 컴퓨터공학과(졸) <br> -6학기 장학금 수혜 <br> -교내 알고리즘 경연대회 1위(대상,2015) <br> -웹 프로그래밍 튜터(2016) "
-        image: assets/img/timeline/1.jpg
+        desc: "-충남대학교 컴퓨터공학과(졸) <br> -6학기 장학금 수혜 <br> -교내 알고리즘 경연대회 1위(대상,2015) <br> -확률 및 통계 학부생튜터(2015)<br> -웹 프로그래밍 학부생튜터(2016) <br> -컴퓨터 프로그래밍1 학부생튜터<br>(2016, 삼성전자 SCSC전용교과목)
+         <br> -대한전자공학회 우수발표논문상(2016)"
+        image: assets/img/CNU1.jpg
         alt:
         align: right
       - title: "특공00부대 통신장교"
         year: "2017.03-2019.06"
         desc: "-네트워크 유·무선 인프라 운영 <br> -보안솔루션(NAC,DRM 등) <br> -통역장교 임무수행(3개월,2018~2019)"
-        image: assets/img/timeline/2.jpg
+        image: assets/img/태극기.png
         alt:
       - title: "롯데정보통신(LDCC)"
         year: "2019.07 ~ 재직중"
@@ -68,7 +69,7 @@ en: &DEFAULT_EN
 
   portfolio:
     title: "Portfolio"
-    text: "Projects & Certificate & Awards Record"
+    text: "업무 경험 및 자격증 목록 <br> 정보처리기사 : SQLD : 네트워크관리사(2급) : OPIC-AL"
     section: portfolio
     closebutton: "Close Project"
 
@@ -77,23 +78,23 @@ en: &DEFAULT_EN
     text: "our story"
     section: about
 
-  clients:
-    section: clients
-    max-height: 100px
-    horizontal-scrolling: "" #"yes/no"
-    list:
-      - title: "Naver"
-        url: https://github.com/raviriley/agency-jekyll-theme
-        logo: assets/img/clients/envato.jpg
-      - title: "designmodo"
-        url: https://github.com/raviriley/agency-jekyll-theme
-        logo: assets/img/clients/designmodo.jpg
-      - title: "themeforest"
-        url: https://github.com/raviriley/agency-jekyll-theme
-        logo: assets/img/clients/themeforest.jpg
-      - title: "Creative Market"
-        url: https://github.com/raviriley/agency-jekyll-theme
-        logo: assets/img/clients/creative-market.jpg
+#  clients:
+#    section: clients
+#    max-height: 100px
+#    horizontal-scrolling: "" #"yes/no"
+#    list:
+#      - title: "Naver"
+#        url: https://github.com/raviriley/agency-jekyll-theme
+#        logo: assets/img/clients/envato.jpg
+#      - title: "designmodo"
+#        url: https://github.com/raviriley/agency-jekyll-theme
+#        logo: assets/img/clients/designmodo.jpg
+#      - title: "themeforest"
+#        url: https://github.com/raviriley/agency-jekyll-theme
+#        logo: assets/img/clients/themeforest.jpg
+#      - title: "Creative Market"
+#        url: https://github.com/raviriley/agency-jekyll-theme
+#        logo: assets/img/clients/creative-market.jpg
 
   team:
     title: "OUR AMAZING TEAM"
