--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -27,10 +27,10 @@ en: &DEFAULT_EN
     events:
       - title: "ChungNam National University"
         year: "2013-2017"
-        desc: "-충남대학교 컴퓨터공학과(졸) <br> -6개 학기 장학생 <br> -교내 알고리즘 경연대회 1위(대상,2015) <br> -확률 및 통계 학부생튜터(2015)<br> -웹 프로그래밍 학부생튜터(2016) <br> -컴퓨터 프로그래밍1 학부생튜터<br>(2016, 삼성전자 SCSC전용교과목)
+        desc: "-충남대학교 컴퓨터공학과(졸) <br> -6개 학기 장학생 선정 <br> -교내 알고리즘 경연대회 1위(대상,2015) <br> -확률 및 통계 학부생튜터(2015)<br> -웹 프로그래밍 학부생튜터(2016) <br> -컴퓨터 프로그래밍1 학부생튜터<br>(2016, 삼성전자 SCSC전용교과목)
          <br> -대한전자공학회 우수발표논문상(2016)"
         image: assets/img/CNU1.jpg
-        alt:
+        alt: 
         align: right
       - title: "특공여단 통신장교"
         year: "2017.03-2019.06"
